--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -176,7 +176,7 @@
   "searchOptions": "Opciones",
   "searchCase": "Coincidir mayúsculas",
   "searchRegex": "RegEx",
-  "searchRank": "Rango",
+  "searchRank": "Auto",
   "openOpen": "Abrir",
   "openNew": "Nueva",
   "openMore": "Más",
@@ -341,7 +341,7 @@
   "setGenNewVersion": "Nueva versión de aplicación liberada y descargada",
   "setGenReleaseNotes": "Ver notas de versión",
   "setGenReloadToUpdate": "Recarga para actualizar",
-  "setGenUpdateManual": "Se ha lanzado una nueva versión. Se comprobará si hay actualizaciones y se instalarán automáticamente, pero no se puede auto-actualizar desde tu versión.",
+  "setGenUpdateManual": "Hay una nueva versión disponible. Se comprobará si hay actualizaciones y se instalarán automáticamente, pero no se puede auto-actualizar desde tu versión.",
   "setGenDownloadUpdate": "Descargar actualización",
   "setGenUpdateAuto": "Descargar e instalar automáticamente",
   "setGenUpdateCheck": "Comprobar pero no descargar",
