--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -109,6 +109,8 @@
   "genPresetMac": "MAC-cím",
   "genPresetHash128": "128 bites hash",
   "genPresetHash256": "256 bites hash",
+  "genHidePass": "Jelszó elrejtése",
+  "genShowPass": "Jelszó mutatása",
   "grpTitle": "Csoport",
   "grpSearch": "Keresés engedélyezése a csoport bejegyzéseire",
   "grpAutoType": "Automatikus gépelés",
@@ -174,6 +176,7 @@
   "searchOptions": "Opciók",
   "searchCase": "Kis-nagybetű számít",
   "searchRegex": "RegEx",
+  "searchRank": "Auto",
   "openOpen": "Megnyit",
   "openNew": "Új",
   "openMore": "Továbbiak",
@@ -215,6 +218,7 @@
   "openErrorFileNotFound": "Fájl nem található",
   "openListErrorBody": "Hiba történt a fájl lista betöltése során",
   "openShowAllFiles": "Minden fájl megjelenítése",
+  "openFileNoCacheError": "A fájl nem található meg a gyorsítótárban. Ez azért fordulhat elő, mert a böngésző gyorsítótára ki lett tisztítva. A fájl megnyitásához, távolítsa el azt a KeeWeb-ből, majd adja hozzá újra.",
   "detAttDownload": "Shift-klikk a csatolmány gombon a letöltéshez vagy",
   "detAttDelToRemove": "Törlés vagy eltávolítás",
   "detEmpty": "A jelszavai itt fognak megjelenni",
@@ -378,6 +382,7 @@
   "setGenShowSubgroups": "Minden alcsoport bejegyzéseinek megjelenítése",
   "setGenTableView": "Bejegyzések listája táblázatban",
   "setGenColorfulIcons": "Színes egyedi ikonok a listában",
+  "setGenDirectAutotype": "Ha csak egyetlen egyező bejegyzés található, automatikusan válassza ki azt az egyet az automatikus gépeléshez.",
   "setGenFunction": "Működés",
   "setGenAutoSyncOnClose": "Automatikus mentés és szinkronizálás bezáráskor",
   "setGenAutoSyncTimer": "Automatikus mentés és szinkronizálás időszakosan",
@@ -410,6 +415,7 @@
   "setGenTryBetaWarning": "Nem mentett fájlok",
   "setGenTryBetaWarningBody": "Mentsen minden fájlt, és kattintson erre a gombra ismét",
   "setGenShowAppLogs": "Alkalmazás napló megjelenítése",
+  "setGenReloadApp": "Az alkalmazás újratöltése",
   "setFilePath": "Fájl elérési út",
   "setFileStorage": "Ez a fájl betöltve innen: {}",
   "setFileIntl": "A fájl a belső alkalmazástárolóban van tárolva.",
