--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -1,4 +1,13 @@
 {
+  "detDelToTrash": "¿Eliminar la entrada?",
+  "detDelToTrashBody": "La entrada se moverá a la papelera.",
+  "setGenThemeMacDark": "Modo oscuro de macOS",
+  "setFileSaveToHtml": "HTML",
+  "exportFileInfo": "Información de archivo",
+  "exportHtmlName": "Nombre",
+  "exportHtmlDate": "Fecha de exportación",
+  "exportGenerator": "Software",
+  "exportDescription": "Este archivo está generado con {}.",
   "months": [
     "Enero",
     "Febrero",
@@ -80,7 +89,7 @@
   "menuSetGeneral": "General",
   "menuSetAbout": "Acerca de",
   "menuAlertNoTags": "Sin etiquetas",
-  "menuAlertNoTagsBody": "Puede añadir nuevas etiquetas mientras edita una entrada, en la sección de etiquetas.",
+  "menuAlertNoTagsBody": "Puede añadir nuevas etiquetas mientras editas los campos, en la sección de Etiquetas.",
   "menuEmptyTrash": "Vaciar papelera",
   "menuEmptyTrashAlert": "¿Vaciar papelera?",
   "menuEmptyTrashAlertBody": "No podrá recuperar los elementos eliminados",
@@ -149,7 +158,7 @@
   "keyChangeRepeatPassword": "Contraseña, una vez más",
   "keyEnter": "Introducir",
   "iconFavTitle": "Descargar y usar el favicon del sitio web",
-  "iconSelCustom": "Elegir icono personalizado",
+  "iconSelCustom": "Elige un icono personalizado",
   "listEmptyTitle": "Vacío",
   "listEmptyAdd": "Añadir con el botón {} de arriba",
   "listGroup": "Grupo",
@@ -219,7 +228,7 @@
   "openListErrorBody": "Se ha producido un error al cargar la lista de archivos",
   "openShowAllFiles": "Mostrar todos los archivos",
   "openFileNoCacheError": "Fichero no encontrado en el almacenamiento caché. Esto puede suceder por haber limpiado el caché del navegador. Para abrir el fichero, elimínalo de KeeWeb y vuelve a añadirlo.",
-  "detAttDownload": "Haz Mayús-clic sobre el botón para descargar o",
+  "detAttDownload": "Presiona Mayús-clic sobre el botón para descargarlo o",
   "detAttDelToRemove": "Delete para eliminar",
   "detEmpty": "Tus contraseñas se mostarán aquí",
   "detGroupRestore": "Para restaurar este grupo, por favor arrástralo a cualquier grupo fuera de la papelera",
@@ -351,7 +360,7 @@
   "setGenErrorChecking": "Error buscando actualizaciones",
   "setGenLastCheckSuccess": "Última búsqueda satisfactoria en {}",
   "setGenLastCheckVer": "la última versión era {}",
-  "setGenCheckedAt": "Comprobado en",
+  "setGenCheckedAt": "Comprobado el",
   "setGenLatestVer": "estás usando la última versión",
   "setGenNewVer": "nueva versión {} disponible",
   "setGenDownloadingUpdate": "Descargando actualización...",
@@ -380,9 +389,9 @@
   "setGenTitlebarStyleHidden": "Título personalizado",
   "setGenTitlebarStyleHiddenInset": "Título personalizado, ventana arrastrable",
   "setGenShowSubgroups": "Mostrar entradas de todos los subgrupos",
-  "setGenTableView": "Vista de tabla de lista de entradas",
-  "setGenColorfulIcons": "Iconos coloridos customizados en lista",
-  "setGenDirectAutotype": "Si se encuentra una única entrada, selecciónala para Auto-tecleo automático.",
+  "setGenTableView": "Mostrar lista de entradas como un panel horizontal",
+  "setGenColorfulIcons": "Iconos propios con color en la lista",
+  "setGenDirectAutotype": "Si se encuentra una única entrada, escogerla automáticamente para Auto-tecleo.",
   "setGenFunction": "Función",
   "setGenAutoSyncOnClose": "Guardar y sincronizar automáticamente al cerrar",
   "setGenAutoSyncTimer": "Guardar y sincronizar periódicamente de forma automática",
@@ -407,7 +416,7 @@
   "setGenLockMinimize": "Cuando la app está minimizada",
   "setGenLockCopy": "Al copiar contraseña",
   "setGenLockAutoType": "En auto-tecleo",
-  "setGenLockOrSleep": "Cuando el ordenador esté bloqueado o en suspensión",
+  "setGenLockOrSleep": "Cuando el ordenador esté bloqueado o suspendido",
   "setGenStorage": "Almacenamiento",
   "setGenShowAdvanced": "Mostrar opciones avanzadas",
   "setGenDevTools": "Mostrar herramientas de desarrollador",
@@ -465,10 +474,10 @@
   "setFileKdfParamsPar": "Paralelismo",
   "setFileKeyChangeForce": "Preguntar cambio de clave tras (días)",
   "setFileUseKeyFile": "Usar archivo llave",
-  "setFileUseGenKeyFile": "Usar archivo llave generado",
-  "setFileUseOldKeyFile": "Usar antiguo archivo llave",
-  "setFileGenKeyFile": "Generar nuevo archivo llave",
-  "setFileDontUseKeyFile": "No usar archivo llave",
+  "setFileUseGenKeyFile": "Usar el archivo de llave generado",
+  "setFileUseOldKeyFile": "Usar el antiguo archivo llave",
+  "setFileGenKeyFile": "Generar un nuevo archivo llave",
+  "setFileDontUseKeyFile": "No usar un archivo llave",
   "setFileEmptyPass": "Contraseña vacía",
   "setFileEmptyPassBody": "Guardar una base de datos sin contraseña hace que esté totalmente desprotegida. ¿Seguro que quieres continuar?",
   "setFileSaveError": "Error guardando",
@@ -480,17 +489,17 @@
   "setFileCloseNoSave": "Cerrar y perder cambios",
   "setFileDontClose": "No cerrar",
   "setShTitle": "Atajos",
-  "setShShowAll": "ver todos los elem.",
-  "setShColors": "ver elem. con colores",
+  "setShShowAll": "ver todos los elementos",
+  "setShColors": "ver elementos con colores",
   "setShTrash": "ir a Papelera",
-  "setShFind": "busca, o teclea algo",
+  "setShFind": "buscar, o tan solo empieza a teclear",
   "setShClearSearch": "limpiar búsqueda",
   "setShCopyPass": "copiar contraseña o campo seleccionado",
   "setShCopyUser": "copiar usuario",
   "setShCopyUrl": "copiar sitio web",
   "setShAutoType": "autocompletado entrada seleccionada",
-  "setShPrev": "volver al elem. anterior",
-  "setShNext": "ir al siguiente elem.",
+  "setShPrev": "volver al elemento anterior",
+  "setShNext": "ir al siguiente elemento",
   "setShCreateEntry": "crear entrada",
   "setShOpen": "abrir / nuevo",
   "setShSave": "guardar todos los archivos",
@@ -502,8 +511,8 @@
   "setShAutoTypeGlobal": "auto-completado (cuando la app está en segundo plano)",
   "setShLock": "bloquear base de datos",
   "setPlInstallTitle": "Instalar nuevos complementos",
-  "setPlInstallDesc": "Los complementos de KeeWeb añaden funcionalidades, temas e idiomas a KeeWeb. Los complementos se ejecutan con los mismos privilegios que KeeWeb y pueden acceder y gestionar tus contraseñas. Nunca instales complementos en los que no confíes.",
-  "setPlInstallLabel": "URL complemento",
+  "setPlInstallDesc": "Los complementos incorporan funcionalidades, temas e idiomas a KeeWeb. Los complementos se ejecutan con los mismos privilegios que KeeWeb y pueden tener acceso o modificar tus contraseñas. Nunca instales complementos en los que no confíes.",
+  "setPlInstallLabel": "URL del complemento",
   "setPlInstallBtn": "Instalar",
   "setPlInstallBtnProgress": "Instalando",
   "setPlUninstallBtn": "Desinstalar",
@@ -527,7 +536,7 @@
   "setPlSearch": "Buscar complementos",
   "setPlDevelop": "¿Quieres desarrollar tus propios complementos?",
   "setPlDevelopStart": "Empieza aquí",
-  "setPlTranslate": "O puedes {}",
+  "setPlTranslate": "También puedes {}",
   "setPlTranslateLink": "traducir la aplicación a tu idioma",
   "setPlAutoUpdate": "Actualizar automáticamente",
   "setPlLoadGallery": "Cargar galería de complementos",
@@ -539,7 +548,7 @@
   "setAboutSecond": "y licenciada bajo {}.",
   "setAboutSource": "El código fuente e incidencias están en {}.",
   "setHelpFormat": "Formato de archivo",
-  "setHelpFormatBody": "Esto es una adaptación de la app {} creada con tecnologías web. Puede leer archivos en formato KeePass (kdbx). Puedes crear esos archivos (bases de datos de contraseñas) tanto en KeePass como en esta aplicación. El formato de archivos es 100% compatible y debería ser comprendido por ambas aplicaciones.",
+  "setHelpFormatBody": "Esto es una adaptación de la app {} creada con tecnologías web. Puede leer archivos en formato KeePass (kdbx). Puedes crear esos archivos (bases de datos de contraseñas) tanto en KeePass como en esta aplicación. El formato de archivos es 100% compatible y debería ser legible para ambas aplicaciones.",
   "setHelpProblems": "¿Necesitas ayuda?",
   "setHelpProblems1": "Si algo va mal, por favor {}",
   "setHelpProblems2": "o {}",
@@ -547,7 +556,7 @@
   "setHelpContactLink": "contacta al desarrollador directamente",
   "setHelpAppInfo": "Información de aplicación",
   "setHelpOtherPlatforms": "Otras plataformas",
-  "setHelpDesktopApps": "Aplicaciones escritorio",
+  "setHelpDesktopApps": "Aplicaciones para escritorio",
   "setHelpWebApp": "Aplicación web",
   "setHelpUpdates": "Actualizaciones",
   "setHelpTwitter": "Twitter",
