--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -1,4 +1,13 @@
 {
+  "detDelToTrash": "Usunąć wpis?",
+  "detDelToTrashBody": "Wpis zostanie przeniesiony do folderu kosza.",
+  "setGenThemeMacDark": "MacOS Ciemny",
+  "setFileSaveToHtml": "HTML",
+  "exportFileInfo": "Informacje o pliku",
+  "exportHtmlName": "Nazwa",
+  "exportHtmlDate": "Data eksportu",
+  "exportGenerator": "Oprogramowanie",
+  "exportDescription": "Ten plik jest generowany za pomocą {}.",
   "months": [
     "styczeń",
     "luty",
@@ -80,7 +89,7 @@
   "menuSetGeneral": "Ogólne",
   "menuSetAbout": "Informacje",
   "menuAlertNoTags": "Brak znaczników",
-  "menuAlertNoTagsBody": "Możesz dodać nowe znaczniki podczas edytowania pól w sekcji znaczniki.",
+  "menuAlertNoTagsBody": "Możesz dodać nowe znaczniki podczas edytowania pól w sekcji Znaczniki.",
   "menuEmptyTrash": "Opróżnij kosz",
   "menuEmptyTrashAlert": "Opróżnić kosz?",
   "menuEmptyTrashAlertBody": "Nie będziesz mógł przywrócić elementów",
@@ -176,7 +185,7 @@
   "searchOptions": "Opcje",
   "searchCase": "Wielkość liter",
   "searchRegex": "RegEx",
-  "searchRank": "Ranga",
+  "searchRank": "Automatycznie",
   "openOpen": "Otwórz",
   "openNew": "Nowy",
   "openMore": "Więcej",
