--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -1,4 +1,13 @@
 {
+  "detDelToTrash": "Видалити запис?",
+  "detDelToTrashBody": "Запис буде перенесено у кошик.",
+  "setGenThemeMacDark": "macOS Dark",
+  "setFileSaveToHtml": "HTML",
+  "exportFileInfo": "Інформація про файл",
+  "exportHtmlName": "Ім'я",
+  "exportHtmlDate": "Дата експорту",
+  "exportGenerator": "Програмне забезпечення",
+  "exportDescription": "Цей файл згенеровано з {}.",
   "months": [
     "Січень ",
     "Лютий ",
@@ -54,7 +63,7 @@
   "website": "сайт ",
   "tags": "теги",
   "notes": "нотатки ",
-  "entry": "записати",
+  "entry": "запис",
   "group": "група ",
   "noTitle": "немає назви ",
   "or": "чи",
@@ -109,6 +118,8 @@
   "genPresetMac": "MAC-адреса",
   "genPresetHash128": "128-бітний хеш",
   "genPresetHash256": "256-бітний хеш",
+  "genHidePass": "Зховати пароль",
+  "genShowPass": "Показати пароль",
   "grpTitle": "Група ",
   "grpSearch": "Включити пошук записів в цій групі",
   "grpAutoType": "Включити автозаповнення ",
@@ -131,8 +142,8 @@
   "genPsEnabled": "Показати в списку шаблонів",
   "genPsDefault": "Обраний за замовчуванням",
   "genPsDefaultLength": "Стандартна довжина",
-  "genPsUpper": "Прописні латинські букви",
-  "genPsLower": "Строчные латинские буквы",
+  "genPsUpper": "Великі латинські літери",
+  "genPsLower": "Малі латинські літери",
   "genPsDigits": "Цифри",
   "genPsSpecial": "Спеціальні символи",
   "genPsBrackets": "Дужки",
@@ -173,6 +184,7 @@
   "searchOptions": "Налаштування",
   "searchCase": "З урахуванням регістру",
   "searchRegex": "RegEx",
+  "searchRank": "Автоматично",
   "openOpen": "Відкрити",
   "openNew": "Створити",
   "openMore": "Ще варіанти",
@@ -185,7 +197,7 @@
   "openDropHere": "перетягніть файли сюди",
   "openFailedRead": "Не вдалося розпізнати файл",
   "openNothingFound": "Нічого не знайдено",
-  "openNothingFoundBody": "Немає файлів, які могли бути відкриті.",
+  "openNothingFoundBody": "Немає файлів, які могли б бути відкриті.",
   "openSelectFile": "Оберіть файл",
   "openSelectFileBody": "Оберіть файл, який ви хотіли б відкрити",
   "openPassFor": "Пароль для",
@@ -212,7 +224,9 @@
   "openError": "Помилка",
   "openErrorDescription": "Помилка під час відкриття файлу",
   "openErrorFileNotFound": "Файл не знайдено",
+  "openListErrorBody": "Помилка завантаження списку файлів",
   "openShowAllFiles": "Показати всі файли",
+  "openFileNoCacheError": "Файл не знайдено в кеші. Це може трапитися, якщо сховище браузера було очищено. Щоб відкрити файл, видаліть його з KeeWeb і додайте заново.",
   "detAttDownload": "Натисніть Shift і клацніть по вкладенню щоб завантажити або",
   "detAttDelToRemove": "Delete для видалення",
   "detEmpty": "Ваші паролі будуть відображатися тут",
@@ -230,6 +244,12 @@
   "detHistoryNoTitle": "немає назви",
   "detHistoryCurState": "поточний стан",
   "detHistoryCurUnsavedState": "поточний незбережений стан",
+  "detHistoryRevertAlert": "Повернутися до цього стану історії?",
+  "detHistoryRevertAlertBody": "Ваш поточний стан буде збережено в історії.",
+  "detHistoryDeleteAlert": "Видалити цей стан історії?",
+  "detHistoryDeleteAlertBody": "Ви не зможете відновити його.",
+  "detHistoryDiscardChangesAlert": "Скасувати зміни, зроблені в запису?",
+  "detHistoryDiscardChangesAlertBody": "Незбережені зміни буде втрачено без можливості відновлення.",
   "detBackToList": "назад до списку",
   "detSetIconColor": "Змінити колір",
   "detSetIcon": "Змінити іконку",
@@ -278,7 +298,7 @@
   "detSetupOtpAlertBody4": "Якщо ви не можете сканувати код, натисніть Введіть код вручну",
   "detSetupOtpManualButton": "Введіть код вручну",
   "detSetupOtpScanButton": "Вибір/Сканування",
-  "detSetupOtpAlertBodyWith": "с {}",
+  "detSetupOtpAlertBodyWith": "з {}",
   "detOtpImageError": "Помилка зчитування зображення",
   "detOtpImageErrorBody": "На жаль, ми не змогли прочитати формат зображення, будь ласка, зв'яжіться з авторами програми з докладною інформацією про помилки.",
   "detOtpImageReading": "Зчитування QR коду...",
@@ -286,18 +306,21 @@
   "detOtpQrErrorBody": "На жаль, ми не змогли прочитати QR-код, будь ласка, спробуйте ще раз або зв'яжіться з авторами програми з докладною інформацією про помилки.",
   "detOtpQrWrong": "Невірний QR код",
   "detOtpQrWrongBody": "Ваш QR-код був успішно відсканований, але він не містить даних одноразового пароля.",
-  "autoTypeEntryFields": "Поля введення",
+  "detLockField": "Заблокувати поле, його зміст буде зкрито і він не буде відображатися в пошуку. Щоб побачити зміст поля треба буде клікнути по ньому.",
+  "detUnlockField": "Розблокувати поле, його зміст стане видимий і він буде відображатися в пошуку.",
+  "autoTypeEntryFields": "Поля запису",
   "autoTypeModifiers": "Клавіші-модифікатори",
   "autoTypeKeys": "Ключі",
   "autoTypeLink": "ще",
-  "autoTypeError": "помилка авто-типу",
-  "autoTypeErrorGeneric": "Була помилка виконання автоматичного типу: {}",
+  "autoTypeError": "помилка автоматичного введення",
+  "autoTypeErrorGeneric": "Помилка виконання автоматичного введення: {}",
   "autoTypeErrorGlobal": "Для використання глобальних гарячих клавіш, зробіть активним вікно додатка, в якому хочете ввести пароль",
   "autoTypeErrorNotInstalled": "{} не встановлений",
-  "autoTypeHeader": "Авто-тип: Оберіть",
+  "autoTypeHeader": "Автовведення: Оберіть",
   "autoTypeMsgNoWindow": "Нам не вдалося отримати активний заголовок вікна, почніть вводити для пошуку",
   "autoTypeMsgMatchedByWindow": "Обрати пароль для {}",
   "autoTypeNoMatches": "немає збігів",
+  "autoTypeSelectionHint": "Введіть послідовність автовведення",
   "appSecWarn": "Не безпечно!",
   "appSecWarnBody1": "Ви завантажили цю программу через незахищене з'єднання. Хтось може спостерігати за вами і вкрасти ваші паролі. Ми наполегливо рекомендуємо вам зупинитися. Ви можете продовжити тільки, якщо ви чітко розумієте, що ви робите.",
   "appSecWarnBody2": "Так, ваша база даних в зашифрованому вигляді, але ніхто не може гарантувати, що програма не була змінена на шляху до вас.",
@@ -316,6 +339,7 @@
   "appNotSupportedError": "Ваш браузер не підтримується.",
   "appTabWarn": "Забагато вкладок ",
   "appTabWarnBody": "KeeWeb не може бути використаний в двох вкладках браузера одночасно, будь ласка, закрийте цю вкладку.",
+  "appRightsAlert": "Блокування KeeWeb програми",
   "appRightsAlertBody1": "Ваш застосунок KeeWeb поки що не захищений від внесення несанкціонованих змін. Просимо надати дозвіл на запис у застосунку лише для адміністраторів.",
   "appRightsAlertBody2": "Не хочете надавати дозвіл? Тоді, ви можете зробити це самі через Термінал",
   "setGenTitle": "Загальні налаштування",
@@ -365,6 +389,10 @@
   "setGenTableView": "Перегляд списку записів у вигляді таблиці",
   "setGenColorfulIcons": "Кольоровий список не стандартних іконок",
   "setGenFunction": "Функції",
+  "setGenAutoSyncOnClose": "Автоматично зберігати та синхронізувати при закритті",
+  "setGenAutoSyncTimer": "Автоматично зберігати та синхронізувати через деякий період часу",
+  "setGenAutoSyncTimerOff": "Відключено",
+  "setGenAutoSyncTimerInterval": "Кожні {} хвилин",
   "setGenRememberKeyFiles": "Запам'ятовувати файли-ключі",
   "setGenNoRememberKeyFiles": "Не запам'ятовувати ",
   "setGenRememberKeyFilesData": "Зберігати у внутрішній пам'яті програми",
@@ -380,9 +408,11 @@
   "setGenClearSeconds": "через {} секунд",
   "setGenClearMinute": "в хвилину",
   "setGenMinInstead": "Мінімізувати програму замість закриття",
+  "setGenLock": "Автоматичне блокування",
   "setGenLockMinimize": "Авто блокування при мінімізації",
   "setGenLockCopy": "Блокувати програму після копіювання пароля",
   "setGenLockAutoType": "Автоматичне блокування при авто-введенні",
+  "setGenLockOrSleep": "Коли комп'ютер заблоковано або відправлено у сон",
   "setGenStorage": "Сховище",
   "setGenShowAdvanced": "Показати додаткові налаштування (ці установки можуть бути небезпечні)",
   "setGenDevTools": "Засоби розробки",
@@ -390,6 +420,7 @@
   "setGenTryBetaWarning": "Незбережені файли",
   "setGenTryBetaWarningBody": "Будь ласка, збережіть всі файли і натисніть цю кнопку ще раз",
   "setGenShowAppLogs": "Журнал програми",
+  "setGenReloadApp": "Перезапустити програму",
   "setFilePath": "Шлях до файлу",
   "setFileStorage": "Цей файл завантажений з {}.",
   "setFileIntl": "Цей файл зберігається у внутрішній пам'яті програми",
@@ -399,13 +430,16 @@
   "setFileSaveTo": "Зберегти як ...",
   "setFileClose": "Закрити",
   "setFileSync": "Синхр-я",
+  "setFileSyncVerb": "Синхронізація",
   "setFileSaveToXml": "XML",
   "setFileLastSync": "Остання синх-я",
   "setFileLastSyncUnknown": "невідомо",
   "setFileSyncInProgress": "йде синхронізація",
   "setFileSyncError": "помилка синхр-ї",
   "setFilePass": "Майстер пароль",
+  "setFileConfirmPass": "Підтвердити майстер пароль",
   "setFilePassChanged": "пароль був змінений; залиште поле порожнім, щоб використовувати старий пароль",
+  "setFilePassNotMatch": "паролі не збігаються, будь ласка, введіть заново",
   "setFileKeyFile": "Файл ключа",
   "setFileSelKeyFile": "Оберіть файл ключа",
   "setFileNames": "Назва",
@@ -421,6 +455,8 @@
   "setFileBackupNowWorking": "За роботою...",
   "setFileBackupError": "Помилка копіювання",
   "setFileBackupErrorDescription": "Помилка запису файлу копії ",
+  "setFileBackupErrorIsDir": "Невалідний шлях до резервної копії",
+  "setFileBackupErrorIsDirDescription": "Схоже, що шлях до резервної копії вказує на директорію. Будь ласка, вкажіть ім'я файлу всередені директорії.",
   "setFileBackupOnSave": "Кожен раз, коли я зберігаю файл",
   "setFileBackupDaily": "Щодня",
   "setFileBackupWeekly": "Щотижня",
@@ -530,6 +566,7 @@
   "dropboxLinkApp": "Папка програми (Apps/KeeWeb)",
   "dropboxLinkFull": "Повністю Dropbox або будь-яка папка",
   "dropboxLinkCustom": "Свій Dropbox-додаток",
+  "gdriveSharedWithMe": "Розшарено зі мною",
   "webdavSaveMethod": "Метод збереження",
   "webdavSaveMove": "Завантажити тимчасовий файл і перемістити",
   "webdavSavePut": "Перезаписати файл kdbx за допомогою PUT",
